server/public/assets/css/style.css
/* ... */
#frontpage_player{
    position: fixed;
    bottom: 10px;
    right: 10px;
    z-index: 10;
    cursor:pointer;
}

#frontpage_player #player{
    width:200px;
    cursor:pointer;
}

#text-chat-input{
    border-top: 1px solid #9e9e9e;
}

#channel-load{
    /*display:none;*/
    position: absolute;
    z-index:1;
    top: 52px;
    background-color:rgba(0,0,0,0);
}

#channel-load-move{
    background-color: #FFFFFF !important;
}

.rounded{
    border-radius: 4px;
}

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    overflow-x: hidden;
    -webkit-transition: background-color 1s;
    -moz-transition:background-color 1s;
    -ms-transition:background-color 1s;
    -o-transition:background-color 1s;
    transition:background-color 1s;
    overflow-y:scroll !important;
}

#main-container {
    -webkit-transition: background-color .2s;
    -moz-transition: background-color .2s;
    -ms-transition: background-color .2s;
    -o-transition: background-color .2s;
    transition: background-color .2s;
}

.main, #main-row, .video-container, #playlist{
    height: calc(100vh - 64px);
}

footer{
    margin-top:0px !important;
}

.left-embed{
    margin-left: -9px !important;
    margin-right: 1px !important;
}

.right-embed{
    margin-right: 3px !important;
    margin-left: -17px !important;
}

/* global colors */

.modal-overlay {
    z-index: 999999 !important;
}

.modal {
    z-index: 9999999999 !important;
}

.material-tooltip {
    z-index: 999999 !important;
}

#toast-container {
    z-index: 999999 !important;
}

#user_password {
    width: 50% !important;
}

.modal-header-fixed{
    position:fixed;
    width:100px;
    right:0px;
}

.help-button-footer, .embed-button-footer, .contact-button-footer{
    width:17em;
    background: #1e88e5;
    border-radius: 2px;
    color:white;
    text-align: center;
}

.footer-buttons li a{
    margin-top:10px;
    padding-left:10px;
}

.footer-button-icon{
    font-size:33px !important;
    margin-right:10px;
}

.side-nav{
    overflow-x:hidden;
}

footer.page-footer,
nav, .tabs .tab a,
.side-nav .collapsible-body li.active,
.side-nav.fixed .collapsible-body li.active,
.pagination li.active{
    background-color: #2D2D2D;
}

.tabs .tab a{
    padding: 0px;
}

.secondary-content,
.dropdown-content li > a, .dropdown-content li > span,
.input-field .prefix.active,
input[type=text]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label, input[type=email]:focus:not([readonly]) + label, input[type=url]:focus:not([readonly]) + label, input[type=time]:focus:not([readonly]) + label, input[type=date]:focus:not([readonly]) + label, input[type=datetime-local]:focus:not([readonly]) + label, input[type=tel]:focus:not([readonly]) + label, input[type=number]:focus:not([readonly]) + label, input[type=search]:focus:not([readonly]) + label, textarea.materialize-textarea:focus:not([readonly]) + label
{
    color: #2D2D2D;
}

.pin{
    position: absolute;
    right: 15px;
    width: 25px;
    font-size: 25px;
    text-align: right;
}

.field-settings{
    margin-left: 25px !important;
    color: rgb(68,68,68);
    display: flex;
    align-items: center;
    height: 64px !important;
    display: flex;
    flex-direction: row;
    align-content: center;
    align-items: center;
}

.not-imported-container{
    display: block;
    height: 100% !important;
}

.not-exported-container{
    display: block !important;
    margin-left: 0px !important;
}

.not-exported-container, .not-imported-container {
    height: auto !important;
}

.youtube_clicked{
    display: none;
}

.import-icon{
    position: absolute;
}

#preloader.progress.frontpage-preloader .indeterminate {
    background-color: #ff9800 !important;
}

#import, #import_spotify{
    width: 65%;
    padding-left: 35px;
    color: rgb(68,68,68);
    border-bottom: 1px solid lightgrey;
    padding-bottom: 0px;
    height: 64px;
}

#password{
    width: 84%;
    margin-left: 30px;
    margin-bottom: 0;
}

span.badge.new,
.progress .determinate,
.progress .indeterminate,
.switch label input[type=checkbox]:checked + .lever:after
{
    background-color: #2D2D2D;
}

span.badge.new.white{
    color: black;
    margin-top: 12px;
    background: white;
    margin-left: -15px;
}

.suggested-link span.badge.new.white{
    min-width: initial;
    margin-left: 0px;
}

.suggested-link {
    display: flex !important;
    justify-content: space-around;
}

.suggested-link span.badge:after{
    content: "";
}

input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
    border-bottom: 1px solid #9D9D9D;
    box-shadow: 0 1px 0 0 #9D9D9D;
}

/* End global colors */

nav .brand-logo{
    padding-left: 20px;
    position: relative;
    height:100%;
}

nav .brand-logo-navigate{
    padding-left: 0px;
}

#fp-nav {
    background-color:rgba(45,45,45,1);
    position: fixed;
    z-index: 10;
    /*width: calc(100vw - 8px);*/
    overflow: hidden;
}

.import-a, .suggested{
    width:100%;
}

#nav-mobile .green:hover{
    background-color: #38803C !important;
}

.footer-copyright{
    /*text-align: center;*/
}

.footer-copyright a { color: #fff;}
.footer-copyright a:hover{color:#6699FF}

main {
    flex: auto;
}

nav .zbrand{
    min-width: 200px;
    overflow: hidden;
    position: relative;
    font-size: 30px;
    padding: 0 20px;
    left: initial;
    display: inline-flex;
}

.navbar-fixed {
    z-index: 999999;
    height: 128px;
}

.fullwidth{
    width:100%;
}

.highlighted{
    font-weight: 300;
}

.invisible{
    opacity: 0;
}
/* ... */

